css/grayscale.css
body {
  width: 100%;
  height: 100%;
  font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: white;
  background-color: white;
}
@font-face {
    font-family: 'blocksblocks';
    src: url('blocks-webfont.woff2') format('woff2'),
         url('blocks-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
html {
  width: 100%;
  height: 100%;
}

h1
{
  font-size: 4em;
  /*font-family: 'blocksblocks';*/
  color: rgb(199, 199, 199);
}
h2
{
  font-size: 3em;
  /*font-family: 'blocksblocks';*/
  color: rgb(127, 127, 127);
}
p {
  margin: 0 0 25px;
  font-size: 1em;
  line-height: 1.5;
}
@media (min-width: 768px) {
  p {
    margin: 0 0 35px;
    font-size: 1.5em;
    line-height: 1.6;
  }
}
a {
  color: rgb(251, 2, 2);
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
a:hover,
a:focus {
  text-decoration: none;
  color: #1d9b6c;
}
.taddress {
  color: rgb(2, 251, 2);
}

.navbar-custom {
  margin-bottom: 0;
  /*border-bottom: 1px solid rgba(255, 255, 255, 0);*/
  font-family: 'Roboto', sans-serif;
  background-color: black;
}
.navbar-custom .navbar-toggle {
  color: black;
  background-color: rgba(255, 255, 255, 0);
  font-size: 0.5em;
}
.navbar-custom .navbar-toggle:focus,
.navbar-custom .navbar-toggle:active {
  outline: none;
}
.navbar-custom .navbar-brand {
  font-size: 1em;
}
.navbar-custom .navbar-brand:focus {
  outline: none;
}
.navbar-custom a {
  color: rgb(0, 0, 0);
}
.navbar-custom .nav li a {
  -webkit-transition: background 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}
.navbar-custom .nav li a:hover {
  color: rgb(0, 0, 0);
  outline: none;
  background-color: transparent;
}
.navbar-custom .nav li a:focus,
.navbar-custom .nav li a:active {
  outline: none;
  background-color: transparent;
}
.navbar-custom .nav li.active {
  outline: none;
}
.navbar-custom .nav li.active a {
  background-color: rgba(0, 0, 0, 0.5);
}
.navbar-custom .nav li.active a:hover {
  color: rgb(0, 0, 0);
}
@media (min-width: 768px) {
  .navbar-custom {
    padding: 20px 0;
    border-bottom: none;
    letter-spacing: 1px;
    background: rgb(0, 0, 0);
    
  }
  .navbar-custom.top-nav-collapse {
    padding: 0;
    background: white;
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
  }
}
.intro {
  display: table;
  width: 100%;
  height: auto;
  text-align: left;
  color: black;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}
.intro .intro-body {
  display: table-cell;
  vertical-align: middle;
}
.intro .intro-body .brand-heading {
  font-size: 1em;
  color: black;
}
.intro .intro-body .intro-text {
  font-size: 1em;
  color: black;
}
@media (min-width: 768px) {
  .intro {
    height: 100%;
    padding: 0;
  }
  .intro .intro-body .brand-heading {
    font-size: 3em;
  }
  .intro .intro-body .intro-text {
    font-size: 2em;
  }
}
.content-section {}
.details-section {
  width: 100%;
  color: black;
  background-color: rgb(239, 239, 239);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}
.education-section {
  width: 100%;
  color: black;
  background-color: rgb(255, 255, 255);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}
.programming-section {
  width: 100%;
  color: black;
  background-color: rgb(239, 239, 239);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}


.btn {
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  border-radius: 0;
}
.btn-default {
  border: 1px solid #42DCA3;
  border-radius: 25px;
  color: #42DCA3;
  background-color: transparent;
}
.btn-default:hover,
.btn-default:focus {
  border: 1px solid #42DCA3;
  outline: none;
  color: black;
  background-color: #42DCA3;
}
ul.banner-social-buttons {
  margin-top: 0;
}

footer p {
  margin: 0;
}
::-moz-selection {
  text-shadow: none;
  background: #fcfcfc;
  background: rgba(255, 255, 255, 1);
}
::selection {
  text-shadow: none;
  background: #fcfcfc;
  background: rgba(255, 255, 255, 1);
}
img::selection {
  background: transparent;
}
img::-moz-selection {
  background: transparent;
}
body {
  webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
}

